# C2PA_PROJECT

./: Cargo.toml  README.md
src/: circuit.rs  generate_proof.rs  image_utils.rs  main.rs
